--- a/stylesheets/cheat-sheet.css
+++ b/stylesheets/cheat-sheet.css
@@ -8,11 +8,12 @@ div.card {
   background-color: white;
   margin: 2em 2em 2em 2em;
 /*  height: 5em;*/
-  width: 20%;
-  padding-bottom: 20%
+  width: 15em;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   padding: 2em;
-  font-size: 8px;
+  font-size: 11px;
+  box-shadow: 10px 10px 5px #325872;
+  text-indent: 20px;
 }
 
 div.card p {
