--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -35,6 +35,7 @@ div.container {
   margin-right: 1em;
   margin-left: 1em;
   text-align: center;
+  text-indent: 30px;
 }
 
 
